crates/vize_patina/src/rules/script/snapshots/vize_patina__rules__script__custom_event_name_casing__tests__invalid_pascal_case_dollar_emit.snap
---
source: crates/vize_patina/src/rules/script/custom_event_name_casing.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/custom-event-name-casing",
        severity: Error,
        message: "Custom event name 'MyEvent' is not camelCase.",
        start: 11,
        end: 20,
        help: Some(
            "Vue 3 recommends camelCase for emitted event names; rename this event to camelCase (e.g. `myEvent`).",
        ),
        labels: [
            Label {
                message: "expected camelCase",
                start: 11,
                end: 20,
            },
        ],
        fix: None,
    },
]
